--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
     text-align: center;
-    background-color: #121212;
+    background-color: var(--grey);
     width: 100vw;
     height: 100vh;
     /* display: flex; */
