--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,26 @@
 .App {
     text-align: center;
-    background-color: var(--grey);
+    /* background-color: #3a393c; */
     width: 100vw;
     height: 100vh;
+    
     /* display: flex; */
     color: white;
+    /* background-image: linear-gradient(
+    to right top,
+    #f9f871,
+    #ffe469,
+    #ffd166,
+    #ffbe66,
+    #ffac69,
+    #ff9d6d,
+    #ff8f73,
+    #ff827b,
+    #fc7486,
+    #f46993,
+    #e861a2,
+    #d65db1 
+  );*/
 }
 
 nav {
@@ -35,9 +51,12 @@ nav h1 {
 .board {
     width: 450px;
     height: 550px;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
+    /* background-image: url('./img/CardBG.png');
+    background-position: center;
+    background-size: cover; */
+    padding: 30px;
 }
 
 .row {
@@ -50,26 +69,29 @@ nav h1 {
 .letter {
     flex: 33%;
     height: 100%;
-    border: 1px solid grey;
     margin: 5px;
     display: grid;
     place-items: center;
     font-size: 30px;
     font-weight: bolder;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 6px 6px 10px #3CCEBE;
+    font-family: 'Calligraffitti', cursive;
+    filter: brightness(200%);
 }
 
 #correct {
-    background-color: #528d4e;
+    color: #528d4e;
+    transform: scale(1.3);
+    
 }
 
 #almost {
-    background-color: #b49f39;
+    color: #b49f39;
+    transform: scale(1.2);
 }
 
 #error {
-    background-color: #3a393c;
 }
 
 .keyboard {
@@ -111,8 +133,8 @@ nav h1 {
     display: grid;
     place-items: center;
     font-size: 20px;
-    background-color: grey;
-    color: white;
+    background-color: var(--white);
+    color: #000;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
 }
