--- a/src/Components/GlobalStyled/GlobalStyled.module.css
+++ b/src/Components/GlobalStyled/GlobalStyled.module.css
@@ -1,3 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@800&family=Oleo+Script+Swash+Caps&display=swap')
 /* font-family: 'Calligraffitti', cursive; */
+/* font-family: 'Hahmlet', serif; */
